<resources>
    <string name="app_name">Color App</string>
    <string name="title_text">Create an RGB Color</string>
    <string name="instructions_text">Add two hexadecimal characters between 0-9, A-F or a-f without the \'#\' for each channel</string>
    <string name="red_channel">Red Channel</string>
    <string name="green_channel">Green Channel</string>
    <string name="blue_channel">Blue Channel</string>
    <string name="button_text">CREATE RGB COLOR</string>
</resources>