<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        style="@style/title_text"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instruction_text"
        android:text="@string/instructions_text"
        style="@style/text_string"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/red_channel_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction_text">

         <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/red_channel"
            android:hint="@string/red_channel"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/green_channel_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/red_channel_wrapper"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/green_channel"
            android:hint="@string/green_channel"
            android:tooltipText="@string/green_channel"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/blue_channel_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/green_channel_wrapper"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/blue_channel"
            android:hint="@string/blue_channel"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        style="@style/button_view"
        app:layout_constraintTop_toBottomOf="@+id/blue_channel_wrapper"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_hex_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_hex_view"
        android:text="Here is your color"
        app:layout_constraintTop_toBottomOf="@+id/button_create"
        app:layout_constraintStart_toStartOf="parent"
        />

    <!--<TextView
        android:id="@+id/button_hex_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_hex_view"
        android:text="Here is your color"
        app:layout_constraintTop_toBottomOf="@+id/button_create"
        app:layout_constraintStart_toStartOf="parent"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>